plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/top-mpp/src/jsJvm18iOSMain/kotlin/forJsJvmOnly/SomethinJsJvmaSpecial.kt
package forJsJvmOnly

actual class <!LINE_MARKER("descr='Has expects in multimod-hmpp.top-mpp.jsJvm18iOSMain module'")!>SomethinJsJvmaSpecial<!> {
}

expect class <!LINE_MARKER("descr='Has actuals in multimod-hmpp.top-mpp.jsJvm18iOSMain module'")!>SomethinJsJvmaSpecial<!> {
}

expect class <!LINE_MARKER("descr='Has actuals in multimod-hmpp.top-mpp.jsJvm18iOSMain module'")!>HavingActualNearby<!>
actual class <!LINE_MARKER("descr='Has expects in multimod-hmpp.top-mpp.jsJvm18iOSMain module'")!>HavingActualNearby<!>
